<resources>
    <string name="quizTitle">The Brain of Britain</string>
    <string name="app_name">Brain Of Britain</string>
    <string name="user_name">Please enter your name</string>
    <string name="question_1">1. Which tribal leader fought the Roman conquest of Britain?</string>
    <string name="Q1_A1">Hadrian</string>
    <string name="Q1_A2">Boudicca</string>
    <string name="Q1_A3">King Canute</string>
    <string name="Q1_A4">Neville Chamberlain</string>
    <string name="question_2">2. What year was the Norman invasion of Britain by William the Conqueror?</string>
    <string name="Q2_A1">1066</string>
    <string name="Q2_A2">1215</string>
    <string name="Q2_A3">1471</string>
    <string name="Q2_A4">793</string>
    <string name="question_3">3. How many of King Henry VII’s wives were executed?</string>
    <string name="Q3_A1">1</string>
    <string name="Q3_A2">6</string>
    <string name="Q3_A3">3</string>
    <string name="Q3_A4">2</string>
    <string name="question_4">4. In which battle was Napoleon defeated by the British Army?</string>
    <string name="Q4_A1">The Battle of Hastings</string>
    <string name="Q4_A2">The Battle of the Bulge</string>
    <string name="Q4_A3">The Battle of Waterloo</string>
    <string name="Q4_A4">The Battle of Britain</string>
    <string name="question_5">5. Who is the longest reigning British Monarch?</string>
    <string name="Q5_A1">King George V</string>
    <string name="Q5_A2">Queen Elizabeth II</string>
    <string name="Q5_A3">King Edward VIII</string>
    <string name="Q5_A4">Queen Victoria</string>
    <string name="question_6">6. How much of the British population were killed by the Black Death?</string>
    <string name="Q6_A1">A Half</string>
    <string name="Q6_A2">A Quarter</string>
    <string name="Q6_A3">A Third</string>
    <string name="Q6_A4">Three Quarters</string>
    <string name="question_7">7. When did British women get equal voting rights as men?</string>
    <string name="Q7_A1">1870</string>
    <string name="Q7_A2">1918</string>
    <string name="Q7_A3">1928</string>
    <string name="Q7_A4">1969</string>
    <string name="question_8">8. In what year was the great fire of London?</string>
    <string name="Q8_A1">1300</string>
    <string name="Q8_A2">1666</string>
    <string name="Q8_A3">1840</string>
    <string name="Q8_A4">1938</string>
    <string name="question_9">9. Which TWO of the following are FALSE?</string>
    <string name="Q9_A1">The Prime Minister lives at 11 Downing Street</string>
    <string name="Q9_A2">The highest mountain in Britain is Ben Nevis, in Scotland</string>
    <string name="Q9_A3">The Queens birthday is a national holiday</string>
    <string name="Q9_A4">In Britain cars drive on the left side of the road</string>
    <string name="question_10">10. Who was the longest serving Prime Minister of the 20th Century?</string>
    <string name="Q10_A1">Margaret Thatcher</string>
    <string name="Q10_A2">Tony Blair</string>
    <string name="Q10_A3">David Lloyd George</string>
    <string name="Q10_A4">Winston Churchill</string>
    <string name="question_11">11. What is the missing word in the British National Anthem:
    "Send Her ________ happy and glorious"</string>
    <string name="initial_result_message">Are you the Brain of Britain?</string>
    <string name="missing_word">Enter the missing word</string>
    <string name="correctWord">victorious</string>
    <string name="resultMessagePart1">, you scored</string>
    <string name="resultMessagePart2">out of 11!</string>
    <string name="SubmitResultsButton">Submit Answers</string>
    <string name="seeCorrectAnswers">See Correct Answers</string>
    <string name="ResetButton">Try Again</string>
    <string name="answer1">A1: </string>
    <string name="answer2">A2: </string>
    <string name="answer3">A3: </string>
    <string name="answer4">A4: </string>
    <string name="answer5">A5: </string>
    <string name="answer6">A6: </string>
    <string name="answer7">A7: </string>
    <string name="answer8">A8: </string>
    <string name="answer9a">A9a: </string>
    <string name="answer9b">A9b: </string>
    <string name="answer10">A10: </string>
    <string name="answer11">A11: </string>
    <string name="feedbackBad"> Looks like its back to school for you!</string>
    <string name="feedbackMedium">A reasonable effort, but you could do better!</string>
    <string name="feedbackGood">A valiant effort, but perfection still eludes you!</string>
    <string name="feedbackPerfect">Splendid, you truly have a brain to be envied!</string>
    <string name="results_screen_message">And let the Truth be told....</string>
    <string name="notAllQsAnswered">You have not answered all the questions! Back to work!</string>
    <string name="noNameEntered">"You forgot to enter your name!</string>
</resources>
